syntax = "proto2";

option cc_enable_arenas = true;

package c2017.climber;

enum State {
  NOTHING = 0;
  SPIN_UP = 1;
  APPROACHING = 2;
  CLIMBING = 3;
  AT_TOP = 4;
}

message ClimberStatus {
  required uint64 timestamp = 1;
  required State climber_state = 2;
  required double observed_velocity = 3;
}

message ClimberInput {
  required uint64 timestamp = 1;
  required double current = 2;
  required double position = 3; // encoder position, helps find the rate
}

message ClimberOutput {
  required uint64 timestamp = 1;
  required double voltage = 2; // Positive is moving up
}

message ClimberGoal {
  required uint64 timestamp = 1;
  required bool climbing = 2;
}
