syntax = "proto2";

option cc_enable_arenas = true;

package c2017.shooter_group;

enum Wheel {
  IDLE = 0;
  SPINUP = 1;
  SHOOT = 2;
  BOTH = 3;
}

message ShooterGroupGoal {
  required uint64 timestamp = 1;
  required Wheel wheel = 2;
  required bool should_climb = 3;
}
