syntax = "proto2";

package c2017.superstructure;

option cc_enable_arenas = true;

message SuperstructureStatus {
  required bool shooting = 1;
  required bool climbing = 2;
  required bool enable_outputs = 3;
  required bool rumble_on = 4;

  enum ShooterState {
    kShooterIdle = 0;
    kShooterSpinup = 1;
    kShooterAtSpeed = 2;
    kShooterShooting = 3;
  }

  required ShooterState state = 5;
}
