syntax = "proto2";

option cc_enable_arenas = true;

enum RobotMode {
  DISABLED = 0;
  AUTONOMOUS = 1;
  TELEOP = 2;
  ESTOP = 3;
}

message DriverStationStatus {
  required uint64 timestamp = 1;
  required RobotMode mode = 2;
  optional double battery_voltage = 3;

  optional bool brownout = 4;
  optional bool has_ds_connection = 5;

  enum Alliance {
    kRed = 0;
    kBlue = 1;
    kNone = 2;
  }

  optional double match_time = 6;
  optional Alliance alliance = 7;
  optional int64 driver_station_position = 8;
  optional bool has_fms_connection = 9;
  optional bool is_sys_active = 10;
}

message PdpStatus {
  required uint64 timestamp = 1;
  required double current0 = 2;
  required double current1 = 3;
  required double current2 = 4;
  required double current3 = 5;
  required double current4 = 6;
  required double current5 = 7;
  required double current6 = 8;
  required double current7 = 9;
  required double current8 = 10;
  required double current9 = 11;
  required double current10 = 12;
  required double current11 = 13;
  required double current12 = 14;
  required double current13 = 15;
  required double current14 = 16;
  required double current15 = 17;

  required double voltage_in = 18;
  required double temperature = 19;

  optional double total_current = 20;
  optional double total_energy = 21;
  optional double total_power = 22;
}
